Added List View to display saved records. Used ListView and ArrayAdapter for this.

--- a/res/layout/activity_user_inputs_list_activity.xml
+++ b/res/layout/activity_user_inputs_list_activity.xml
@@ -6,10 +6,9 @@
     android:orientation="vertical"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <EditText
-        android:id="@+id/user_input"
+    <ListView
+        android:id="@+id/user_input_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/hint" />
+        android:layout_height="match_parent" />
     
 </LinearLayout>
